[package]
name = "geyserbench"
version = "1.1.1"
edition = "2021"

[dependencies]
yellowstone-grpc-proto = "9"
yellowstone-grpc-client = "9"
tokio-stream = "0.1.17"

prost = "0.14"
prost-types = "0.14"

serde = "1"
toml = "0.9"
env_logger = "0.11.6"
tokio = { version = "1", features = ["full"] }
tonic = "0.14"
tonic-prost = "0.14"
log = "0.4"
futures = "0.3.31"
futures-util = "0.3.31"
bs58 = "0.5.1"
bytes = "1.10.0"
bincode = "1.3.3"
solana-entry = "2"
solana-pubkey = "2"
lazy_static = "1.5.0"
dashmap = "6"
comfy-table = "7.1.0"

[build-dependencies]
anyhow = "1"
tonic-prost-build = "0.14"
protoc-bin-vendored = "3"
